full image links

--- a/_layouts/sales.html
+++ b/_layouts/sales.html
@@ -21,7 +21,7 @@
     <header>
       <div class="inner sales-header">
         <div style="float:left; text-align:center">
-          <img style="border-radius:4px;height:275px" src="/images/book-thumbnail-256.png"/>
+          <img style="border-radius:4px;height:275px" src="{{ site.baseurl }}/images/book-thumbnail-256.png"/>
         </div>
         <h2 style="font-size:24pt;padding-left:275px">C++ and Node.js Integration</h2>
         <p style="font-size:16pt;color:white;padding-left:275px;">The popularity of Node.js just keeps surging, it's great for so many things. But what if you need serious C/C++ speed? What if you want to move to Node.js, but can't afford to rewrite your existing C++ code?</p>
