full image links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,8 @@
           <div class="book-sidebar">
             <h1>E-Book</h1>
             <p>Get the handbook for creating C++ addons. <br/><span class="tagline">Save yourself weeks of time!</span></p>
-            <a href="/book/">
-              <img src="/images/book-thumbnail-256.png"/>
+            <a href="{{ site.baseurl }}/book/">
+              <img src="{{ site.baseurl }}/images/book-thumbnail-256.png"/>
             </a>
              <a style="margin-top:20px;" class="altButton" href="https://gum.co/dTVf" target="_blank">Buy Now!</a>
           </div>
