--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -433,7 +433,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #666;
-  background: #fafafa url(../images/body-bg.jpg) 0 0 repeat;
+  background: #fafafa;
 }
 
 p {
@@ -1025,7 +1025,14 @@ nav a.active,
 
 .posts .title {
   font-size:16pt;
+  font-weight:bold;
+  color:#2c3e50;
+  cursor:hand;
 }
+.posts .title:hover {
+  color:#2268b2;
+}
+
 .posts  {
   list-style-type: none;
   padding-left:0px;
