--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,8 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    <link href="/feed.xml" rel="alternate" title="ATOM" type="application/atom+xml"/>
+    <link href="/feed.rss" rel="alternate" title="RSS" type="application/rss+xml"/>
     <title> {{ page.title }} </title>
     {% include analytics.html %}
   </head>
