updated links, started quickstart

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,6 +74,8 @@
             </a>
              <a style="margin-top:20px;" class="altButton" href="https://gum.co/dTVf" target="_blank">Buy Now!</a>
           </div>
+          {% include learning_node.html %}
+          {% include learning_cpp.html %}
         </aside>
       </div>
       {% else %}
