--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,11 +33,12 @@
         <h2>Learning C++ addons for Node.js</h2>
         </a>
         <nav>
-          <a id="home_nav" class="ghost-button-transition" href="/">Home</a>
+          <a id="home_nav" class="ghost-button-transition" href="/">Quickstart</a>
+          <a id="blog_nav" class="ghost-button-transition" href="/blog/">Blog</a>
           <a id="book_nav" class="ghost-button-transition" href="/book/">Book</a>
           <!--<a id="course_nav" class="ghost-button-transition" href="/course/">Video Course</a>-->
-          <a class="ghost-button-transition" href="https://github.com/freezer333/nodecpp-demo">Code Tutorial</a>
-          <a id="blog_nav" class="ghost-button-transition" href="/blog/">Blog</a>
+          <a class="ghost-button-transition" href="https://github.com/freezer333/nodecpp-demo">Code</a>
+          
           <script>
             var loc = window.location.pathname;
             var nav_id = "home_nav";
@@ -67,12 +68,13 @@
 
         <aside id="sidebar">
           <div class="book-sidebar">
-            <h1>E-Book</h1>
-            <p>Get the handbook for creating C++ addons. <br/><span class="tagline">Save yourself weeks of time!</span></p>
+            <p>
             <a href="{{ site.baseurl }}/book/">
-              <img src="{{ site.baseurl }}/images/book-thumbnail-256.png"/>
+            <p><span class="tagline">Save time!</span><br/>
+            <span class="bline" style="color:#333333">Get <u>the</u> handbook<br/> for C++ addons. </span>
+            </p>
+            <img src="{{ site.baseurl }}/images/book-thumbnail-200.png"/>
             </a>
-             <a style="margin-top:20px;" class="altButton" href="https://gum.co/dTVf" target="_blank">Buy Now!</a>
           </div>
           {% include learning_node.html %}
           {% include learning_cpp.html %}
@@ -87,5 +89,45 @@
       {% endif %} 
     </div>
 
+    {% if page.newsletter %}
+    <div class="page page_odd">
+   <div class="page_content">
+     <h1 class="section_h1">Looking for more?</h1>
+      <p>Sign up to for Node Addons newsletter so you find out when new articles are published right away.  With your signup, you'll get a <span class="text_highlight">free copy of Chapter 2 - Understanding V8 Programming</span> from the <a href="/book/">Node and C++ Integration e-book</a></p>
+        <!-- Begin MailChimp Signup Form -->
+                <div id="mc_embed_signup">
+                <form class="form-blue" action="//scottfrees.us12.list-manage.com/subscribe/post?u=bb2ca971309da75fa431c4c5b&amp;id=e07df29e55" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                        <div class="mc-field-group form-group">
+                            <label class="form-label" for="mce-EMAIL">Email Address  <span class="asterisk">*</span></label>
+                            <input class="form-input" type="email" value="" name="EMAIL" class="form-control required email" id="mce-EMAIL">
+                        </div>
+                        <div class="mc-field-group form-group">
+                            <label class="form-label" for="mce-FNAME">First Name </label>
+                            <input class="form-input" type="text" value="" name="FNAME" class= "form-control" id="mce-FNAME">
+                        </div>
+                        <div class="mc-field-group form-group">
+                            <label class="form-label" for="mce-LNAME">Last Name </label>
+                            <input class="form-input" type="text" value="" name="LNAME" class= "form-control" id="mce-LNAME">
+                        </div>
+                        <div id="mce-responses" class="clear">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_bb2ca971309da75fa431c4c5b_e07df29e55" tabindex="-1" value=""></div>
+                        <div class="form-group clear">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="myButton">
+                                <span class="text-muted indicates-required"><span class="asterisk">*</span> indicates required</span>
+                        </div>
+                    </div>
+                </form>
+                </div>
+
+                <!--End mc_embed_signup-->
+            </div>
+</div>
+</div>
+
+{% endif %} 
   </body>
 </html>
