about me sidebar

--- a/_includes/learning_cpp.html
+++ b/_includes/learning_cpp.html
@@ -1,4 +1,4 @@
-<div class="node-sidebar">
+<div class="cpp-sidebar">
   <h1>Learning C++?</h1>
   <p>If you are JS programmer getting your head around C++, start here!</p>
   <ul>
