--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,8 @@
 layout: default
 ---
 
-<h1>{{ page.title }}</h2>
+<h1>{{ page.post_title }}</h1>
+<span class="subtitle">{{ page.subtitle }}</span>
 <p class="meta">{{ page.date | date_to_string }}</p>
 
 {{ content }}
