--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -878,6 +878,12 @@ dl dd {
   margin-bottom:200px;
 }
 
+
+.subtitle {
+  font-size:16pt;
+  color:#DC9456;
+}
+
 figure.highlight { margin-left:0px;margin-right:0px;}
 .code {text-align:left}
 
