posts revise and affiliate links

--- a/_includes/learning_cpp.html
+++ b/_includes/learning_cpp.html
@@ -1,11 +1,12 @@
 <div class="cpp-sidebar">
+  <hr/>
   <h1>Learning C++?</h1>
-  <p>If you are JS programmer getting your head around C++, start here!</p>
-  <ul>
-      <li>Cash</li>
-      <li>Rules</li>
-      <li>Everything</li>
-      <li>Around</li>
-      <li>Me</li>
+  <p>If you are JS programmer trying to getting your head around C++, start here!</p>
+  <ul class='book-recs'>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/0134314301/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0134314301&linkCode=as2&tag=nodeaddons333-20&linkId=21fef0df0c6cdea8cb791ee5866871f0">C++ Without Fear: A Beginner's Guide That Makes You Feel Smart (3rd Edition)</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=0134314301" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/0988927802/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0988927802&linkCode=as2&tag=nodeaddons333-20&linkId=8e5b68214c68f872019654256e2c1b92">Jumping into C++</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=0988927802" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/1491903996/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1491903996&linkCode=as2&tag=nodeaddons333-20&linkId=4baab569eb0acd5e47d409e90f68f4d7">Effective Modern C++: 42 Specific Ways to Improve Your Use of C++11 and C++14</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=1491903996" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/0321563840/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0321563840&linkCode=as2&tag=nodeaddons333-20&linkId=051d040bcf60e3d9cc8aee455846d2e4">The C++ Programming Language, 4th Edition</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=0321563840" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      
   </ul>
 </div>
