--- a/_includes/learning_node.html
+++ b/_includes/learning_node.html
@@ -1,11 +1,12 @@
 <div class="node-sidebar">
+  <hr/>
   <h1>Learning Node?</h1>
   <p>Check out some of these great books on learning everything you need to know about Node.js!</p>
-  <ul>
-      <li>Cash</li>
-      <li>Rules</li>
-      <li>Everything</li>
-      <li>Around</li>
-      <li>Me</li>
+  <ul class="book-recs">
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/1617290572/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1617290572&linkCode=as2&tag=nodeaddons333-20&linkId=f8d4999b7141c446221a48819d22aeb4">Node.js in Action</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=1617290572" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/1937785734/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1937785734&linkCode=as2&tag=nodeaddons333-20&linkId=7abd2186b90487af12e01887b6666c26">Node.js the Right Way: Practical, Server-Side JavaScript That Scales</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=1937785734" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/1491949309/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1491949309&linkCode=as2&tag=nodeaddons333-20&linkId=29ad4ada88d7e9d352ce0be672fe55c6">Web Development with Node and Express: Leveraging the JavaScript Stack</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=1491949309" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+      <li><a target="_blank" href="https://www.amazon.com/gp/product/1617292842/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1617292842&linkCode=as2&tag=nodeaddons333-20&linkId=b3612bc0ada1298a64588fb2f687d0f0">Cross-Platform Desktop Applications: With Node, Electron, and NW.js</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=nodeaddons333-20&l=am2&o=1&a=1617292842" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
   </ul>
+
 </div>
