--- a/_includes/me.html
+++ b/_includes/me.html
@@ -1,7 +1,7 @@
 <div class="about-sidebar">
   <hr/>
   <h1>About me</h1>
-  <img src="/images/sp.jpg"/>
+  <img id="about-image"" src="/images/sp.jpg" width="250"/>
   <p>Hi!&nbsp;&nbsp;I'm Scott Frees. Besides running this site, I'm also an <a href="/book/">author</a>, <a href="https://scottfrees.com">consultant / freelance developer</a>, and a <a href="https://pages.ramapo.edu/~sfrees">college professor</a>.</p>
 
 </div>
