structured book data

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="{{ page.title }}">
+    <meta name="author" content="Scott Frees">
+    <meta name="keywords" content="blog, self-hosted, self-hosted blogging, programmer blog, programmer blogging sites, programmer blog platform, web developer blogs, web developer blogging platform, blogging for programmers, blogging for web developers, tech blogging, Node.js blogging, javascript blogging, C++ blogging, Node.js addons, Native C++ extension, C and JavaScript, C++ and JavaScript">
+    <meta property="og:url" content="{{ site.url }}{{ page.url}}">
+    <meta property="og:title" content="{{ page.title }}">
+    <meta property="og:description" content="{{ page.title }}">
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/zenburn.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/stylesheets/print.css" media="print" />
